ajout des liens

--- a/app/views/admin/sidebar.scala.html
+++ b/app/views/admin/sidebar.scala.html
@@ -3,14 +3,14 @@
     <ul>
         <li class="active"><a href="index.html"><i class="icon icon-home"></i> <span>Tableau de bord</span></a> </li>
         <li> <a href="#"><i class="icon icon-user"></i> <span>Membre</span></a> </li>
-        <li> <a href="#"><i class="icon icon-globe"></i> <span>Situation</span></a> </li>
+        <li> <a href="@routes.AdminController.situation()"><i class="icon icon-globe"></i> <span>Situation</span></a> </li>
         <li><a href="#"><i class="icon icon-envelope"></i> <span>Messages</span></a></li>
         <li><a href="#"><i class="icon icon-comment"></i> <span>Publication</span></a></li>
         <li><a href="@routes.AdminController.role()"><i class="icon icon-tint"></i> <span>Role</span></a></li>
-        <li><a href="interface.html"><i class="icon icon-pencil"></i> <span>Secteur</span></a></li>
-        <li><a href="interface.html"><i class="icon icon-user"></i> <span>Pays</span></a></li>
-        <li><a href="interface.html"><i class="icon icon-user"></i> <span>Article</span></a></li>
-        <li><a href="interface.html"><i class="icon icon-pencil"></i> <span>Publicite</span></a></li>
+        <li><a href="@routes.AdminController.secteur()"><i class="icon icon-pencil"></i> <span>Secteur</span></a></li>
+        <li><a href="@routes.AdminController.pays()"><i class="icon icon-user"></i> <span>Pays</span></a></li>
+        <li><a href="#"><i class="icon icon-user"></i> <span>Article</span></a></li>
+        <li><a href="#"><i class="icon icon-pencil"></i> <span>Publicite</span></a></li>
     </ul>
 </div>
 <!--sidebar-menu-->
