--- a/app/views/entete.scala.html
+++ b/app/views/entete.scala.html
@@ -52,7 +52,7 @@
                         <li><a href="#">Mon compte</a></li>
                         <li><a href="#">Photo de couverture</a></li>
                         <li><a href="#">Completer votre profil</a></li>
-                        <li><a href="#">Deconnexion</a></li>
+                        <li><a href="@routes.ApplicationController.deconnecter()">Deconnexion</a></li>
                     </ul>
                 </li>
             </ul>
