--- a/public/scss/etape.scss
+++ b/public/scss/etape.scss
@@ -71,3 +71,17 @@ body {
     width: 150px;
     color: #fff;
 }
+
+.error-form {
+    background: #d9534f none repeat scroll 0 0;
+    color: #ffffff;
+    float: left;
+    margin-bottom: 45px;
+    padding-right: 10px;
+    width: 100%;
+}
+.icon-error-form {
+    font-size: 18px;
+    margin-right: 2px;
+    padding: 5px 10px;
+}
