--- a/app/views/admin/accueil.scala.html
+++ b/app/views/admin/accueil.scala.html
@@ -26,12 +26,12 @@
 }{
     <div class="quick-actions_homepage">
         <ul class="quick-actions">
-            <li class="bg_lb"> <a href="index.html"> <i class="icon-dashboard"></i> <span class="label label-important">20</span> Tableau de bord </a> </li>
-            <li class="bg_lg span3"> <a href="charts.html"> <i class="icon-user"></i> Membre</a> </li>
-            <li class="bg_ly"> <a href="widgets.html"> <i class="icon-envelope"></i><span class="label label-success">101</span> Message </a> </li>
-            <li class="bg_lo"> <a href="tables.html"> <i class="icon-globe"></i> Pays</a> </li>
-            <li class="bg_ls"> <a href="grid.html"> <i class="icon-comment"></i> Commentaires</a> </li>
-            <li class="bg_lo span3"> <a href="form-common.html"> <i class="icon-pencil"></i> Secteur</a> </li>
+            <li class="bg_lb"> <a href="@routes.AdminController.accueil()"> <i class="icon-dashboard"></i> <span class="label label-important">20</span> Tableau de bord </a> </li>
+            <li class="bg_lg span3"> <a href="#"> <i class="icon-user"></i> Membre</a> </li>
+            <li class="bg_ly"> <a href="#"> <i class="icon-envelope"></i><span class="label label-success">101</span> Message </a> </li>
+            <li class="bg_lo"> <a href="@routes.AdminController.pays()"> <i class="icon-globe"></i> Pays</a> </li>
+            <li class="bg_ls"> <a href="#"> <i class="icon-comment"></i> Commentaires</a> </li>
+            <li class="bg_lo span3"> <a href="@routes.AdminController.secteur()"> <i class="icon-pencil"></i> Secteur</a> </li>
             <li class="bg_ls"> <a href="buttons.html"> <i class="icon-user"></i> Relation</a> </li>
             <li class="bg_lb"> <a href="interface.html"> <i class="icon-user"></i>Article</a> </li>
             <li class="bg_lg"> <a href="calendar.html"> <i class="icon-pencil"></i>Publicite</a> </li>
